{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 118,
  "lineage": "9042f8b1-c7c5-4506-e84b-bfdbfbc2e290",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-001089eb624938d9f",
            "arn": "arn:aws:ec2:us-east-2:133473559076:instance/i-062d3ef6b4926b3b6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-062d3ef6b4926b3b6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ab2662c4693d0761",
            "private_dns": "ip-10-0-1-212.us-east-2.compute.internal",
            "private_ip": "10.0.1.212",
            "public_ip": "3.145.78.105",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0718c4946993518f2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01cb6e41ed65a8481",
            "tags": {
              "Name": "Terraform instance",
              "jira": "pdd-575",
              "src": "Windows"
            },
            "tags_all": {
              "Name": "Terraform instance",
              "jira": "pdd-575",
              "src": "Windows"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ca12c6657b90f78e"
            ]
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.pdd_575_public_subnet",
            "aws_vpc.pdd_575_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "some_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:133473559076:internet-gateway/igw-00cd01e8c4b424d69",
            "id": "igw-00cd01e8c4b424d69",
            "owner_id": "133473559076",
            "tags": {
              "Name": "Some Internet Gateway"
            },
            "tags_all": {
              "Name": "Some Internet Gateway"
            },
            "vpc_id": "vpc-0765642a9afb67f6f"
          },
          "dependencies": [
            "aws_vpc.pdd_575_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:133473559076:route-table/rtb-083159a43fbd28409",
            "id": "rtb-083159a43fbd28409",
            "owner_id": "133473559076",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00cd01e8c4b424d69",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00cd01e8c4b424d69",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0765642a9afb67f6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.some_ig",
            "aws_vpc.pdd_575_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1_rt_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0837cabaa7020c885",
            "route_table_id": "rtb-083159a43fbd28409",
            "subnet_id": "subnet-01cb6e41ed65a8481"
          },
          "dependencies": [
            "aws_internet_gateway.some_ig",
            "aws_route_table.public_rt",
            "aws_subnet.pdd_575_public_subnet",
            "aws_vpc.pdd_575_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:133473559076:security-group/sg-0ca12c6657b90f78e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ca12c6657b90f78e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "HTTP and SSH",
            "name_prefix": "",
            "owner_id": "133473559076",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0765642a9afb67f6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.pdd_575_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pdd_575_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:133473559076:subnet/subnet-09523cb899421e21d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09523cb899421e21d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "133473559076",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pdd_575 private subnet"
            },
            "tags_all": {
              "Name": "pdd_575 private subnet"
            },
            "vpc_id": "vpc-0765642a9afb67f6f"
          },
          "dependencies": [
            "aws_vpc.pdd_575_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pdd_575_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:133473559076:subnet/subnet-01cb6e41ed65a8481",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01cb6e41ed65a8481",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "133473559076",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pdd_575 public subnet"
            },
            "tags_all": {
              "Name": "pdd_575 public subnet"
            },
            "vpc_id": "vpc-0765642a9afb67f6f"
          },
          "dependencies": [
            "aws_vpc.pdd_575_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "pdd_575_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:133473559076:vpc/vpc-0765642a9afb67f6f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-091337a6c10a40152",
            "default_route_table_id": "rtb-078829d19031298eb",
            "default_security_group_id": "sg-07c5ec62ceb9a48f5",
            "dhcp_options_id": "dopt-6e952007",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0765642a9afb67f6f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-078829d19031298eb",
            "owner_id": "133473559076",
            "tags": {
              "Name": "pdd 575 VPC"
            },
            "tags_all": {
              "Name": "pdd 575 VPC"
            }
          }
        }
      ]
    }
  ]
}